styles.css
/* ... */
.right-part img:nth-child(1){
    position: relative;
    top: 3.25rem;
    left: 0.5rem;
    height: 2rem;
}
.right-part img:nth-child(2){
    position: relative;
    top:3.25rem;
    left:4.9rem;
}
.right-part img:nth-child(3){
    position: relative;
    top: 3.25rem;
    left: 17rem;
}
.right-part img:nth-child(4){
    position: relative;
    right: 18.5rem;
    top: 14rem;
}
.right-part img:nth-child(5){
    position: relative;
  top: 14rem;
  right: 3.45rem;
}
.right-part img:nth-child(6){
    position: relative;
    right: 25rem;
    top: 22.5rem;
    height: 2rem;
}
.right-part img:nth-child(7){
    position: relative;
    top: 24rem;
    right: 6rem;
}

.benefits{
    display: flex;
    padding: 7.5rem 0rem 5rem 0rem;
    flex-direction: column;
    align-items: center;
    gap: 3.75rem;
    align-self: stretch;
  }

.benefits-header{text-align: center;}
.benefits-header h1 {margin: 0;}

.benefits-list {
    display: flex;
    align-self: center;
    gap: 2rem;
  }

.benefits p {
    line-height: 2rem;
    color: #677788;;
    margin: 0;
    font-size: 1.3rem;
    padding-bottom: 1.25rem;
  }

.benefits-header p {
    margin-top: 0.63rem;
    font-size: 1.28rem;
    font-weight: 500;
}

.benefits a{font-size: 1.25rem;}
   
  .card1, .card2, .card3, .card4 {
    display: flex;
    flex-direction: column;
    border: 0.0625rem solid #FFF;
    background: #FFF;
    box-shadow: 0px 0.625rem 1.25rem 0px rgba(0, 0, 0, 0.15);
    padding: 1.25rem;
    width: 16.375rem;
    align-items: flex-start;
  }

.card1 img, .card2 img, .card3 img, .card4 img, .top-plan-left img, .top-plan-right img, .bottom-plan-left img, .bottom-plan-right img {
    width: 3.25rem;
    height: 3.25rem
  }

.sketch {
border: 0.0625rem transparent;
border-radius: 1rem;
background-color: rgba(1, 201, 167, 1);
color: white;
padding: 0.25rem 0.63rem;
font-weight: 800;
}

.banner-section{
    display: flex;
    justify-content: space-between;
    margin: 0 0 5rem 1.8rem;   
    gap: 0.63rem;
}

.left-banner{
    display: flex;
    width: 28.125rem;
    padding: 0.625rem 1.875rem;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.left-banner p{
    font-size: 1.625rem;
}

.right-banner{
    display: flex;
    flex: 1;
    justify-content: flex-end;
}

.right-banner img { 
    margin-top: 9rem;
    margin-bottom: -0.25rem;
}

.why{
    display: flex;
    width: 75%;
    text-align: center;
    margin: auto;
    place-content: center;
}

.why-header p {
    font-size: 1.5rem;
    color: grey;
    margin-bottom: 2.5rem;
    padding-left: 7rem;
    padding-right: 7rem;
}

.bull-list {
    margin-top: 2.5rem;
    margin-bottom: 5rem;
    display: flex;
    justify-content: center;
    place-self: center;
}

.bull-box{
    display: flex;
    flex-direction: column;
}

.bull-box h3 {
    color:#3d4044;
    text-align: center;
    font-weight: 400;
}

.bull-line{
    display: flex;
    align-items: center;
}

.line{
    background-color: #d1dde8;
    height: 0.23rem;
    width: 8rem;   
}

.white{
    color: white;
    background-color: white;
}

.bull-circle{
    position: relative;
    background-color: rgba(236, 242, 255, 1);
    height: 3.5rem;
    border-radius: 2.563rem;
    min-width: 4rem;
    color: #2476FF;
    text-align: center;
    font-size: 2rem;
    padding-top: 0.75rem;
    margin-left: 0.15rem;
    margin-right: 0.15rem;
}

.play-banner {
    text-align: center;
    margin-bottom: 5rem;
}

.play-banner div img {
    width: 80rem;
    height: 30rem;
    margin: 0 2rem;
}

.play-vid a i {
    position: relative;
    top: -17rem;
    box-shadow: 0px 0.1875rem 0.8125rem 0px rgba(0, 0, 0, 0.25);
    border: 0.0625rem transparent;
    background-color: #ffffff;
    padding: 2rem;
    border-radius: 50%;
    font-size: 1.5rem;
    color: black;
}

.hubspot{
    display: flex;
    padding-left: 2rem;
    padding-bottom: 5rem;
}

.person{
    flex: 1;
    display: grid;
    grid-template-columns:repeat(14, 1fr);
    grid-template-rows: repeat(5, 1fr); 
}

.person img:nth-child(1){
    grid-column: 6 / 10;
    grid-row: 1 / 5;
    height: 28rem;
    width: 20rem;
   
}

.person img:nth-child(2){
   grid-column: 7 / 14;
   grid-row: 1 / 4 ;
   height: 22rem;
  
}

.person-quote {
    flex: 1;
    padding-right: 1.8rem;}

.hub-icon{
    margin-bottom: 2rem;
    width: 10rem;
    padding-top: 4.5rem;
}

.hub-quote {
    font-size: 1.9rem;
    line-height: 2.5rem;
    margin-bottom: 3rem;
    max-width: 32rem;
}

.signiture {
    font-size:1.5rem;
    font-weight:600;
}

.signiture p {font-size: 1rem;
font-weight: 600;
color: #666;
margin: 0;
}

.brand-bar{
    display: grid;
    justify-items: center;
}

.brand-bar h3{
    text-align: center;
    color: #5F6368;
    font-size: 1.5rem;
    margin-bottom: 3rem;  
}

.brands{
    display: flex;
    height: 3rem;
    gap: 8.25rem;
    padding: 0 2.5rem; 
    margin-bottom: 5.25rem;
} 


.pricing{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 7.5rem;
    gap: 3.5rem;
}

.price-title h1 {
    font-weight: 700;
    font-size: 2.5rem;
    text-align: center;  
}

.price-title p {
    text-align: center;
    font-size: 1.63rem;
    color: #677788;
}

.plan-table{
    gap: 1.86rem;
    display: flex;
}
.plan-price{font-size: 4rem;}


.price-period{display: flex;}

.plan-period{
    align-self: flex-end;
    color: grey;
}

.plan{
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    border: 0.0625rem transparent;
    box-shadow: 0px 1.25rem 1.25rem 0px rgba(0, 0, 0, 0.15);
    padding: 0 2.5rem;
    width: 27rem;
}

.plan .left-btns {
    flex-direction: column;
    gap: 0;
    color: grey;
}

.planprice{
    display: flex;
    align-items: center;
    font-size: 3.125rem;
    place-items: end;
}

.planprice p{margin-bottom: 0;}

.plan-p{
    font-size: 1.5rem;
    color: #5F6368;
    line-height: 2rem;
}

.plan-features{
    width: 61%;
    flex: 1;
}
/* ... */

